# etheryal-kernel

./: .bashrc  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  TODO.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: coverage.yml  format.yml  greetings.yml  main.yml  tests.yml
docs/: LICENSE_TEMPLATE.txt
src/: async_tasks.rs  build_info.rs  driver.rs  framebuffer.rs  init.rs  lib.rs  log.rs  logger.rs  main.rs  math.rs  mem.rs  memory.rs  multitasking.rs  panic.rs  platform.rs  prelude.rs  serial.rs  startup.rs  structures.rs  tasks.rs  test.wasm  test_runner.rs  tests.rs  wasm.rs
src/memory/: allocator.rs  heap.rs  paging.rs  paging_supervisor.rs
src/multitasking/: thread.rs
src/platform/: arch.rs  datetime.rs  exit.rs  framebuffer.rs  hal.rs  halt.rs  interrupts.rs  memory.rs  power.rs  rand.rs  random.rs  rtc.rs  software.rs  x86_64.rs
src/platform/arch/: x86_64.rs
src/platform/arch/x86_64/: apic.rs  date.rs  gdt.rs  interrupts.rs  random.rs  registers.rs
src/platform/arch/x86_64/registers/: control.rs
src/platform/hal/: software.rs  x86_64.rs
src/platform/hal/software/: math.rs
src/platform/hal/x86_64/: apic.rs  cmos.rs  date.rs  gdt.rs  interrupts.rs  rand.rs  registers.rs
src/platform/hal/x86_64/registers/: control.rs
src/platform/software/: memory.rs
src/platform/x86_64/: apic.rs  gdt.rs  interrupts.rs  memory.rs  registers.rs
src/platform/x86_64/memory/: paging.rs
src/platform/x86_64/registers/: control.rs
src/structures/: growable_bitmap.rs  heap.rs
src/structures/growable_bitmap/: storage.rs
src/tasks/: executor.rs  park.rs  waker.rs  yield_now.rs
src/wasm/: importer.rs  modules.rs
src/wasm/modules/: wasi.rs
targets/: aarch64.json  etheryal-kernel-aarch64.json  etheryal-kernel-x86_64.json  x86_64.json
