[package]
name = "etheryal-kernel"
version = "0.1.0"
authors = ["KernelFreeze <kernelfreeze@outlook.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
built = { git = "https://github.com/etheryal/built", features = ["git2", "chrono"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Random values
uuid = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }

# Boot
bootloader = { git = "https://github.com/etheryal/bootloader", branch = "uefi" }
volatile = { version = "0.4", features = ["unstable"] }
font8x8 = { version = "0.2", default-features = false, features = ["unicode"] }

# Syncronization and async
spin = { version = "0.7", features = ["ticket_mutex"] }
futures = { version = "0.3", default-features = false }
crossbeam-queue = { version = "0.3.1", default-features = false, features = ["alloc"] }

# Memory management
buddy_system_allocator = "0.6"
bitflags = "1.2"

# Platform
chrono = { git = "https://github.com/chronotope/chrono", branch = "main", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }
qemu-exit = { version = "1.0", optional = true }

# Platform specifics
[target.'cfg(target_arch = "x86_64")'.dependencies]
core_detect = "0.1"
cmos = "0.1"
x86_64 = { version = "0.13" }
apic = { git = "https://github.com/rust-osdev/apic" }

[package.metadata.bootloader]
map-physical-memory = true

[dependencies.wasmi]
git = "https://github.com/etheryal/wasmi"
default-features = false
features = ["core"]

[profile.dev]
opt-level = 3
lto = true

[profile.release]
lto = true

[features]
default = ["qemu"]
qemu = ["qemu-exit"]