[package]
name = "etheryal-kernel"
version = "0.1.1"
authors = ["KernelFreeze <kernelfreeze@outlook.com>"]
edition = "2018"
build = "build.rs"
license = "MIT"
description = "WASM and WASI capability-based Kernel. Unlike most historic kernels, components execute in the same address space, which contains software-isolated processes."
repository = "https://github.com/etheryal/bootimage"

[build-dependencies]
built = { git = "https://github.com/etheryal/built", features = ["git2", "chrono"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.7.0"
bitflags = "1.2"
acpi = "2.2"

[dependencies.rand_chacha]
version = "0.3"
default-features = false

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.font8x8]
version = "0.2"
default-features = false
features = ["unicode"]

[dependencies.volatile]
git = "https://github.com/KernelFreeze/volatile"
features = ["unstable"]

[dependencies.spin]
version = "0.7"
features = ["ticket_mutex"]

[dependencies.qemu-exit]
version = "1.0"
optional = true

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc", "nightly"]

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.wasmi]
git = "https://github.com/etheryal/wasmi"
default-features = false
features = ["core"]

[dependencies.bootloader]
git = "https://github.com/rust-osdev/bootloader"
branch = "uefi"

[dependencies.chrono]
git = "https://github.com/chronotope/chrono"
branch = "main"
default-features = false
features = ["alloc"]

# x86_64 platform specifics
[target.'cfg(target_arch = "x86_64")'.dependencies]
core_detect = "0.1"
cmos = "0.1"
x86_64 = { version = "0.13" }
apic = { git = "https://github.com/rust-osdev/apic" }
uart_16550 = { version = "0.2", optional = true }

[package.metadata.bootloader]
map-physical-memory = true

[profile.dev]
opt-level = 3
lto = true

[profile.release]
lto = true

[features]
default = ["qemu"]
qemu = ["qemu-exit", "uart_16550"]
